--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,10 +5,7 @@ body {
 .container {
     width: 90%;
     max-width: 960px;
-    margin: 80px auto;
-    border-radius: 20px;
-    box-shadow: 2px 4px 6px rgba(28, 6, 49, 0.1);
-    background: white;
+    padding: 0 1.5em;
 }
 .error {
     color: #ff3f80;
